update
get my twits
get a single twit
get comments under a twit
get a comment
get my comments
